create radioButton component

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,4 +5,5 @@ $primary_hover: #FFE302;
 $disabled: #B4B4B4;
 $error: #CB3D40;
 $inputBorder: #D0CFCF;
-$labelText: #7E7E7E;
+$text: #7E7E7E;
+$denceText: rgba(0, 0, 0, 0.87);
