--- a/src/scss/components/_fileUploader.scss
+++ b/src/scss/components/_fileUploader.scss
@@ -40,7 +40,7 @@
         border-radius: 0px 4px 4px 0px;
         font-size: 16px;
         line-height: 26px;
-        color: $labelText;
+        color: $text;
 
         &_chosen {
             color: rgba(0, 0, 0, 0.87);
