--- a/src/scss/components/_classicInput.scss
+++ b/src/scss/components/_classicInput.scss
@@ -12,7 +12,7 @@
         transform: translate(16px, -50%);
         font-size: 16px;
         transition: all 0.3s;
-        color: $labelText;
+        color: $text;
     }
 
     .input {
@@ -27,7 +27,7 @@
 
         &:focus+.label {
             transition: all 0.3s;
-            color: $labelText;
+            color: $text;
             transform: translate(16px, -235%);
             font-size: 12px;
             padding: 0 4px;
