--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,6 +7,7 @@ $error: #CB3D40;
 $inputBorder: #D0CFCF;
 $text: #7E7E7E;
 $denceText: rgba(0, 0, 0, 0.87);
+$promoText: #FFFFFF;
 
 $mobile: 361px;
 $tablet: 769px;
