create userCard, users section

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,6 @@
 $primary: #F4E041;
 $secondary: #00BDD3;
-$bgColor: #E5E5E5;
+$bgColor: #F8F8F8;
 $primary_hover: #FFE302;
 $disabled: #B4B4B4;
 $error: #CB3D40;
@@ -11,5 +11,7 @@ $promoText: #FFFFFF;
 
 $mobile: 361px;
 $tablet: 769px;
+$tabletL: 993px;
 $desktop: 1025px;
+$desktopL: 1441px;
 
