--- a/src/scss/components/_radioButton.scss
+++ b/src/scss/components/_radioButton.scss
@@ -1,4 +1,6 @@
 .radio {
+    margin-bottom: 50px;
+    width: 100%;
     &__title {
         margin-bottom: 14px;
         color: $denceText;
@@ -75,5 +77,11 @@
                 }
             }
         }
+    }
+}
+
+@media screen and (min-width: $mobile) {
+    .radio {
+        max-width: 380px;
     }
 }
