--- a/src/scss/components/_userCard.scss
+++ b/src/scss/components/_userCard.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     padding: 20px;
-    // width: 328px;
+    width: 100%;
     border-radius: 10px;
     background-color: #ffff;
     // margin-bottom: 20px;
@@ -34,23 +34,3 @@
         margin-bottom: 20px;
     }
 }
-
-// @media screen and (min-width: $mobile) {
-//     .userCard {
-//         width: 344px;
-     
-//     }
-// }
-
-// @media screen and (min-width: $tablet) {
-//     .userCard {
-//         padding: 164px 0px 163px;
-//     }
-// }
-
-// @media screen and (min-width: $desktop) {
-//     .userCard {
-//         max-width: 1170px;
-//         padding: 164px 0px 163px;
-//     }
-// }
