--- a/src/scss/components/_users.scss
+++ b/src/scss/components/_users.scss
@@ -18,7 +18,7 @@
     &__list {
         margin-bottom: 50px;
         display: grid;
-        grid-template-columns: 328px;
+        grid-template-columns: minmax(100% , 328px);
         grid-row-gap: 20px;
     }
 }
