--- a/src/scss/components/_classicButton.scss
+++ b/src/scss/components/_classicButton.scss
@@ -10,9 +10,11 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 26px;
+    cursor: pointer;
 
     &_type_disabled {
         background-color: $disabled;
+        color: $promoText;
     }
 
     &_button_size_m {
