add validation to form

--- a/src/scss/components/_fileUploader.scss
+++ b/src/scss/components/_fileUploader.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 50px;
+    
 
     .container {
         display: flex;
@@ -49,6 +50,10 @@
         font-size: 16px;
         line-height: 26px;
         color: $text;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        
 
         &_chosen {
             color: rgba(0, 0, 0, 0.87);
