--- a/src/scss/components/_success.scss
+++ b/src/scss/components/_success.scss
@@ -1,5 +1,4 @@
-
-.formSection {
+.success {
     margin: 0 auto;
     padding: 140px 16px 100px;
     display: flex;
@@ -8,18 +7,16 @@
     align-items: center;
     background-color: $bgColor;
 
-    .form {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        &__title {
-            text-align: center;
-            font-weight: 400;
-            font-size: 40px;
-            line-height: 40px;
-            margin-bottom: 50px;
-        }
+    &__title{
+        text-align: center;
+        font-weight: 400;
+        font-size: 40px;
+        line-height: 40px;
+        margin-bottom: 50px;
+    }
+
+    &__img{
+        
     }
 }
 
