--- a/src/scss/components/_promo.scss
+++ b/src/scss/components/_promo.scss
@@ -27,7 +27,7 @@
     }
 }
 
-@media screen and (min-width: $mobile) {
+@media screen and (min-width: $tablet) {
     .promo {
         padding: 89px 16px 88px;
         &__title {
@@ -39,13 +39,13 @@
     }
 }
 
-@media screen and (min-width: $tablet) {
+@media screen and (min-width: $desktop) {
     .promo {
         padding: 164px 0px 163px;
     }
 }
 
-@media screen and (min-width: $desktop) {
+@media screen and (min-width: $desktopL) {
     .promo {
         max-width: 1170px;
         padding: 164px 0px 163px;
