--- a/src/scss/components/_userCard.scss
+++ b/src/scss/components/_userCard.scss
@@ -7,10 +7,6 @@
     width: 100%;
     border-radius: 10px;
     background-color: #ffff;
-    // margin-bottom: 20px;
-    //  &:last-child {
-    //     margin-bottom: 0px;
-    //  }
 
     &__img {
         width: 70px;
@@ -19,7 +15,7 @@
         margin-bottom: 20px;
     }
 
-    &__img~p {
+    &__name, &__position, &__email, &__phone {
         width: 100%;
         font-size: 16px;
         line-height: 26px;
