--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,3 +2,8 @@
 @import './variables';
 @import './lib/normalize';
 @import './components/all';
+
+.container {
+    background-color: $bgColor;
+    margin: 0 auto;
+}
