--- a/src/scss/components/_promo.scss
+++ b/src/scss/components/_promo.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     padding: 40px 16px 71px;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('AssetsRoot/img/pexels-alexandr-podvalny-1227513.jpeg') center (center / cover) no-repeat ;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('AssetsRoot/img/promo.webp') center (center / cover) no-repeat ;
    
     &__title {
         max-width: 328px;
